--- a/assets/css/templatemo-space-dynamic.css
+++ b/assets/css/templatemo-space-dynamic.css
@@ -916,7 +916,7 @@ Banner Style
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  padding: 226px 0px 120px 0px;
+  padding: 226px 0px 50px 0px;
   position: relative;
   overflow: hidden;
 }
@@ -1285,11 +1285,48 @@ Portfolio
 Blog
 --------------------------------------------- 
 */
+.comp {
+  text-align: center;
+  font-family: "Dancing Script", cursive;
+  margin-bottom: 15px;
+  background-color: rgba(255, 255, 255, 0.938);
+  border: 1px solid rgba(255, 255, 255, 0.9);
+  border-radius: 10px;
+  color: rgb(0, 0, 0) !important;
+  font-size: 35px;
+  font-weight: 500;
+}
+.insertcomp {
+  text-align: center;
+  font-family: "Dancing Script", cursive;
+  margin-bottom: 15px;
+  background-color: rgba(255, 255, 255, 0.938);
+  border: 1px solid rgba(255, 255, 255, 0.9);
+  border-radius: 10px;
 
+  font-size: 35px;
+  font-weight: 500;
+}
+/* .hr1 {
+  height: 25px;
+  background: url(/uploads/media/default/0001/01/e7a97bd9b2d25886cc7b9115de83b6b28b73b90b.jpeg)
+    no-repeat center;
+  border: none;
+  width: 100%;
+} */
+
+/* .hr1 {
+  width: 100%;
+  height: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #b7d0e2;
+  border: 0 none;
+} */
 .our-blog {
   position: relative;
   margin-top: 80px;
-  padding-top: 120px;
+  padding-top: 0px;
 }
 
 .our-blog .section-heading h2 {
