--- a/assets/css/templatemo-space-dynamic.css
+++ b/assets/css/templatemo-space-dynamic.css
@@ -407,22 +407,22 @@ header
   padding-right: 20px;
 }
 
-.header-area .main-nav .nav li:last-child {
+/* .header-area .main-nav .nav li:last-child {
   padding-right: 0px;
   padding-left: 40px;
-}
+} */
 
-.header-area .main-nav .nav li:last-child a,
+/* .header-area .main-nav .nav li:last-child a,
 .background-header .main-nav .nav li:last-child a {
   color: #fff !important;
   padding: 0px 20px;
   font-weight: 400;
-}
+} */
 
-.header-area .main-nav .nav li:last-child a:hover,
+/* .header-area .main-nav .nav li:last-child a:hover,
 .header-area .main-nav .nav li:last-child a.active {
   color: #fff !important;
-}
+} */
 
 .header-area .main-nav .nav li a {
   display: block;
@@ -455,10 +455,10 @@ header
   opacity: 1;
 }
 
-.header-area .main-nav .nav li:last-child a:hover,
+/* .header-area .main-nav .nav li:last-child a:hover,
 .background-header .main-nav .nav li:last-child a:hover {
   background-color: #03a4ed;
-}
+} */
 
 .header-area .main-nav .nav li.submenu {
   position: relative;
@@ -672,7 +672,7 @@ header
   }
 }
 
-@media (max-width: 992px) {
+/* @media (max-width: 992px) {
   .header-area .main-nav .nav li:last-child,
   .background-header .main-nav .nav li:last-child {
     display: none;
@@ -681,7 +681,7 @@ header
   .background-header .main-nav .nav li:nth-child(6) {
     padding-right: 0px;
   }
-}
+} */
 
 @media (max-width: 767px) {
   .background-header .main-nav .nav {
@@ -1172,10 +1172,6 @@ Portfolio
   font-weight: 500;
 }
 
-.showed-content {
-  /* background-image: url(/assets/images/banner-right-image.png); */
-}
-
 .our-portfolio {
   padding-top: 120px;
   margin-top: 0px;
@@ -1200,7 +1196,7 @@ Portfolio
 
 .our-portfolio .item:hover .showed-content {
   top: -100px;
-  opacity: 1;
+  opacity: 0;
   visibility: hidden;
 }
 
