--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1029,7 +1029,9 @@ About Us Style
 }
 
 .about-us .services .item .icon img {
-  max-width: 70px;
+  width: 120px;
+  height: 120px;
+  border-radius: 60px;
 }
 
 .about-us .services .item h4 {
@@ -1041,6 +1043,7 @@ About Us Style
 
 .about-us .services .item p {
   color: #fff;
+  text-align: left;
 }
 
 /* 
@@ -1596,7 +1599,6 @@ responsive
   }
   .about-us .left-image {
     margin-right: 0px;
-    position: absolute;
     bottom: -220px;
     right: 0;
   }
